# ExtPorter

./: .dockerignore  .env.backup  .env.example  .gitignore  CLUSTERING_SUMMARY.md  Dockerfile  ENV_INTEGRATION.md  FAKEIUM_VALIDATION.md  MEMORY_FIXES.md  Makefile  QUICKSTART_FAKEIUM.md  README.md  cluster_visualization.html  docker-compose.yml  eslint.config.mjs  flake.nix  jest.config.js  justfile  mongo-init.js  package-lock.json  package.json  prettier.config.js  renovate.json  test-cached-descriptions.md  test_api_charts.html  test_charts.html  tsconfig.json
.claude/: settings.local.json
docs/: CLIENT_COMPARISON.md  COPILOT_MIGRATION.md  LLM_EXTENSION_FIXER.md  LLM_INTEGRATION.md  MEMORY_MANAGEMENT_FIXES.md  OPENCODE_MIGRATION.md  cws_fix_summary.md  cws_metadata_implementation.md
examples/: README.md  cws_extraction_demo.ts  llm-remote-example.ts  opencode_sdk_demo.ts  prompt-template-example.ts  reports_usage.ts  show-actual-llm-request.ts  test-chat-api.ts  test-config.ts  test-ssh-url.ts
ext_analyzer/: Cargo.toml  README.md  colors.ts  display-utils.ts  example-display-cws.ts  ext.ts  extension-actions.ts  extension-explorer.ts  file-operations.ts  index.tsx  info.ts  input-handler.ts  llm-manager.ts  llm-service.ts  menu-bar.tsx  test_ws_url.sh  tsconfig.json  types.ts  websocket-context.tsx  websocket.ts
ext_analyzer/prompts/: extension-description.txt
ext_analyzer/src/: app.rs  browser.rs  extension_downloader.rs  kitty.rs  listener_labels.rs  main.rs  theme.rs  types.rs  websocket.rs
ext_analyzer/src/tabs/: analyzer.rs  database.rs  explorer.rs  image_handler.rs  migrator.rs  mod.rs  settings.rs
ext_analyzer/src/tabs/analyzer/: image_handler.rs  input_handler.rs  mod.rs  renderer.rs  report_form.rs
ext_analyzer/src/tabs/database/: input_handler.rs  mod.rs  renderer.rs
ext_analyzer/src/tabs/explorer/: input_handler.rs  mod.rs  renderer.rs  search.rs
ext_analyzer/src/tabs/migrator/: dialog.rs  input_handler.rs  mod.rs  renderer.rs
ext_analyzer/tabs/: analyzer-tab.tsx  database-tab.tsx  explorer-tab.tsx  migrator-tab.tsx  settings-tab.tsx
ext_analyzer/tests/: integration.rs
ext_tester/: chrome_tester.ts  dual_chrome_tester.ts  (+3 more)
(+300 files in other folders)
