[package]
name = "ext_analyzer"
version = "1.0.0"
edition = "2021"
authors = ["ExtPorter Team"]
description = "Terminal UI client for ExtPorter migration framework"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# Async runtime and utilities
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Date and time
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image handling
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25"
ratatui-image = { version = "8.0", features = ["serde"] }
tui-textarea = "0.7.0"
