[package]
name = "ext_analyzer"
version = "1.0.0"
edition = "2021"
authors = ["ExtPorter Team"]
description = "Terminal UI client for ExtPorter migration framework"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"
tachyonfx = "0.20"

# Async runtime and utilities
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Environment variables
dotenv = "0.15"

# Date and time
chrono = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image handling
reqwest = { version = "0.13", features = ["blocking"] }
image = "0.25"
ratatui-image = { version = "8.0", features = ["serde"] }
tui-textarea = "0.7.0"

# Lazy static initialization
once_cell = "1.19"

# Browser automation
chromiumoxide = { version = "0.6", features = ["tokio-runtime"] }

# Archive handling
tar = "0.4"
flate2 = "1.0"

# Temp directory management
tempfile = "3.10"

# Hashing for cache validation
md-5 = "0.10"

# Unix socket for kitty
libc = "0.2"
